--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,5 @@
 .mainWindow{
-    -fx-background-image: url("back.png");
+    -fx-background-image: url("STORE.jpeg");
     -fx-background-repeat: stretch;
     -fx-background-size: 900 506;
     -fx-background-position: center center;
